adding new changes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="hero-content">
                 <h1>Kazim Musa</h1>
                 <h2>Senior Data Engineer</h2>
-                <p class="tagline">Building scalable data solutions with cloud-native technologies</p>
+                <p class="tagline">Building scalable data solutions with Azure, GCP and AWS cloud-native technologies</p>
                 <div class="social-links">
                     <a href="mailto:kazimali07@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="https://linkedin.com/in/kazim-musa-69629024" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -44,8 +44,22 @@
                 <div class="timeline-item">
                     <div class="timeline-content">
                         <h3>Senior Data Engineer</h3>
+                        <h4>South East Melbourne Primary Health Networks | Melbourne, Australia</h4>
+                        <p class="date">November 2024 - Present</p>
+                        <ul>
+                            <li>Designed and implemented a scalable Azure Data Lake Gen2 medallion architecture (Bronze, Silver, Gold layers) to support structured data processing and analytics</li>
+                            <li>Led the setup and configuration of Azure Databricks workspaces across DEV and PROD environments, integrating with Unity Catalog and implementing data lineage via Azure Purview</li>
+                            <li>Automated data ingestion pipelines using Azure Data Factory and Databricks Autoloader, enabling incremental load and near real-time ingestion of structured and semi-structured data</li>
+                            <li>Established robust CI/CD workflows using Azure DevOps for infrastructure as code, job deployment, and configuration management of Azure Data Services</li>
+                            <li>Implemented RBAC and resource locks with managed identities to ensure data governance compliance</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <h3>Senior Data Engineer</h3>
                         <h4>Wesfarmers Health | Melbourne, Australia</h4>
-                        <p class="date">August 2023 - Present</p>
+                        <p class="date">August 2023 - November 2024</p>
                         <ul>
                             <li>Architected end-to-end data solutions using Snowflake</li>
                             <li>Led SAP models migration to GCP with 40% improved efficiency</li>
@@ -77,6 +91,7 @@
                 <div class="skill-category">
                     <h3>Cloud & Data Platforms</h3>
                     <ul>
+                        <li>Azure (Data Lake Gen2, Databricks, Data Factory, Purview)</li>
                         <li>GCP (BigQuery, Cloud Storage, Cloud Run)</li>
                         <li>AWS (S3, Redshift, EMR, Lambda)</li>
                         <li>Snowflake</li>
@@ -85,9 +100,10 @@
                 <div class="skill-category">
                     <h3>Data Engineering & DevOps</h3>
                     <ul>
-                        <li>ETL/ELT: DBT, Informatica</li>
-                        <li>Orchestration: Airflow, Cloud Composer</li>
-                        <li>IaC: Terraform, Docker, Kubernetes</li>
+                        <li>ETL/ELT: Azure Databricks, DBT, Informatica</li>
+                        <li>Orchestration: Azure Data Factory, Airflow, Cloud Composer</li>
+                        <li>IaC: Azure DevOps, Terraform, Docker, Kubernetes</li>
+                        <li>Data Governance: Azure Purview, RBAC, Unity Catalog</li>
                     </ul>
                 </div>
                 <div class="skill-category">
